environments/gloo-edge/gateway-api/with-gm-istio/bookinfo-app/base/bookinfo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    istio.io/rev: 1-23
